# QuantumQuestTGC

./: add_cards_and_characters.py  affected_files_contents.txt  automate_icon_update.py  build.gradle.kts  check_gradle.sh  cleanup_and_fix_project.py  cleanup_project.bat  cleanup_unnecessary_files.sh  collected_info.txt  create_missing_files.sh  customize_cards_characters.py  errors.txt  fix_build_errors.py  fix_kotlin_classes.py  fix_kotlin_file_structure.py  fix_loading_activity.py  fix_pathing_issues.sh  gradle.properties  info.bat  organize_project.bat  populate_files.bat  project_file_tree.txt  python save_file_tree.py  remove_duplicate_files.bat  remove_duplicates.py  run_all_fixes.bat  run_clean_build.sh  run_tasks.bat  script_name.py  settings.gradle.kts  setup_files.sh  split_file_tree.py  update_game_files.py  update_icons.bat  update_icons.sh
app/: CMakeLists.txt  build.gradle.kts  google-services.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/quantumquest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: the_quest.ogg.sfk
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  CMakeLists.txt  CardAttack.cpp  Combatant.cpp  Combatant.h  Direction.h  ExampleCard.cpp  ExampleCard.h  GameActivityMotionEvent.cpp  GameActivityMotionEvent.h  Model.cpp  Model.h  Obstacle.h  PlayerID.h  Position.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  Utility.cpp  adventure_match.cpp  adventure_match.h  ar_manager.cpp  ar_manager.h  ar_match.cpp  ar_match.h  ar_object.cpp  ar_object.h  ar_session.cpp  attack_card.cpp  attack_card.h  battle.cpp  battle.h  card.cpp  card.h  card_attack.cpp  card_attack.h  card_defence.cpp  (+54 more)
app/src/main/cpp/ar/: ar_manager.h
app/src/main/cpp/cards/: card.cpp  card.h
app/src/main/cpp/game/: adventure_match.cpp
app/src/main/cpp/networking/: Combatant.h  ExampleCard.cpp  ExampleCard.h  Renderer.h  Shader.h  TextureAsset.h  Utility.h  ar_match.cpp  ar_session.h  base_card.h  card_attack.cpp  card_defence.cpp  card_defence.h  card_effect.h  card_pool.cpp  card_pool.h  card_type.h  card_type_specific.cpp  card_type_specific.h  character.cpp  deck.cpp  direction.h  element.h  enemy.cpp  enemy.h  game_state.cpp  input_handler.h  jni_interface.cpp  match.cpp  native-lib.cpp  observer_effect.h  player.cpp  pvp_match.cpp  pvp_match.h  quantum_quest_game.h  quantum_state.cpp  quantum_state.h  random_generator.cpp  room.cpp  room.h  (+3 more)
app/src/main/java/: LoadingActivity.kt  VideoActivity.java
app/src/main/java/com/example/quantumquest/: AIPlayer.kt  ARActivity.kt  AssetManager.kt  CameraPermissionHelper.kt  CardBattleScreen.kt  CardCollectionActivity.kt  CardModel.kt  CardView.kt  CharacterModel.kt  CharacterSelectActivity.kt  GameActivity.kt  GameBoardView.kt  GameInterface.kt  GameManager.kt  LoginActivity.kt  MainActivity.kt  MyApplication.kt  PlayerModel.kt  PlayerSetup.kt  QuantumQuest.kt  SplashActivity.java  VideoActivity.java
app/src/main/java/com/example/quantumquest/Model/: BaseCard.kt  Card.kt  CardModel.kt  CharacterCard.kt  Quest.kt  QuestCard.kt  Room.kt  RoomEffectCard.kt
app/src/main/java/com/example/quantumquest/activities/: GameActivity.kt  MainActivity.kt  TutorialActivity.kt
app/src/main/java/com/example/quantumquest/cards/: Card.cpp  Card.h  Card.kt  CardTypeSpecific.cpp  CardTypeSpecific.h  CharacterCard.kt  ElementalSpellCard.kt  ExampleCard.cpp  ExampleCard.h  MysticArtifacts.cpp  MysticArtifacts.h  PixelArtifactCard.kt  QuantumAnomalyCard.kt  QuestCard.kt  RoomEffectCard.kt  TemporalShifts.cpp  TemporalShifts.h
app/src/main/java/com/example/quantumquest/characters/: Character.kt  ChronoBard.kt  PixelSorceress.kt  QuantumKnight.kt  ZaraObserversLens.kt
app/src/main/java/com/example/quantumquest/controllers/: GameController.h
app/src/main/java/com/example/quantumquest/databases/: Card.h  CardDatabase.cpp  CardDatabase.h  CardRepository.h
app/src/main/java/com/example/quantumquest/duplicates/: AspectRatioVideoView.java  CardBattleScreen.kt  CardCollectionActivity.kt  CardView.kt  GameConstants.kt  GameManager.kt  LoginActivity.kt  MainMenu.kt  NetworkManager.kt  PlayerInfoView.kt  VideoActivity.java
app/src/main/java/com/example/quantumquest/entities/: Player.cpp  Player.h
app/src/main/java/com/example/quantumquest/managers/: CardManager.cpp  CardManager.h  CardManager.kt  CharacterManager.kt  GameLoopManager.kt  GameManager.cpp  GameManager.h  GameManager.kt  GameStateManager.cpp  GameStateManager.h  Player.cpp  Player.h  PlayerInputHandler.cpp  PlayerInputHandler.h  PlayerSelectionManager.cpp  PlayerSelectionManager.h  QuantumEchoManager.kt  QuestManager.kt  RoomManager.kt  TutorialLogic.cpp  TutorialManager.cpp  TutorialManager.h
app/src/main/java/com/example/quantumquest/mechanics/: QuantumEchoes.cpp  QuantumEchoes.h
app/src/main/java/com/example/quantumquest/quests/: DragonQuest.kt  Quest.kt  TreasureHunt.kt
app/src/main/java/com/example/quantumquest/repositories/: CardRepository.cpp  CardRepository.h
app/src/main/java/com/example/quantumquest/repository/: CardRepository.kt  CharacterRepository.kt
app/src/main/java/com/example/quantumquest/rooms/: FireRoom.kt  Room.kt  RoomBase.kt  WaterRoom.kt
app/src/main/java/com/example/quantumquest/ui/: GameController.h  (+5 more)
app/src/main/res/drawable/: btn_background.xml  character_portraits.xml  room_backgrounds.xml
app/src/main/res/drawable/card_art/: card_art.py
app/src/main/res/layout/: activity_card_collection.xml  activity_collection.xml  activity_game.xml  activity_loading.xml  activity_login.xml  activity_main.xml  activity_splash.xml  card_layout.xml  game_activity.xml  video_activity.xml  view_card.xml  view_player_info.xml
app/src/main/res/mipmap-anydpi-v26/: card_frame.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/quantumquest/: ExampleUnitTest.kt
(+5 files in other folders)
